hiện thị real time thông tin của B -> A

--- a/src/views/client/pages/users/accept.pug
+++ b/src/views/client/pages/users/accept.pug
@@ -7,8 +7,7 @@ block main
   .container 
     include ../../partials/list-btn-user.pug 
 
-    .row 
-      .col-12 
+    .row(data-user-accept = user.id)
         each user in users
           .col-6
             div(class = "box-user ")
