Hiện thị real time user online

--- a/src/views/client/pages/users/friend.pug
+++ b/src/views/client/pages/users/friend.pug
@@ -7,23 +7,22 @@ block main
   .container 
     include ../../partials/list-btn-user.pug 
 
-    .row 
-      .col-12 
-        each user in listFriend
-          .col-6
-            div(class = "box-user")
-              .inner-avatar
-                img(src=(user.avatar ? user.avatar : "/client/image/user-avatar.png"), alt=user.fullName)
-              .inner-info
-                .inner-name #{user.fullName}
-                .inner-buttons
-                  a(href="http://"
-                    class = "btn btn-sm btn-primary m-1"
-                  ) Chat            
-              .inner-status(
-                status=user.statusOnline
-                )
-                i.fa-solid.fa-circle
+    .row(data-user-id-friend = user.id)
+      each user in listFriend
+        .col-6(user-id = user.id)
+          div(class = "box-user")
+            .inner-avatar
+              img(src=(user.avatar ? user.avatar : "/client/image/user-avatar.png"), alt=user.fullName)
+            .inner-info
+              .inner-name #{user.fullName}
+              .inner-buttons
+                a(href="http://"
+                  class = "btn btn-sm btn-primary m-1"
+                ) Chat            
+            .inner-status(
+              status=user.statusOnline
+              )
+              i.fa-solid.fa-circle
 
 
 block script 
