--- a/src/views/client/partials/header.pug
+++ b/src/views/client/partials/header.pug
@@ -44,7 +44,7 @@ header
                   li 
                     a(href="/user/login") Sign in 
                 li  
-                  a(href="/chat") Chat 
+                  a(href="/users/friends") Bạn bè 
 
           .col-1
             .box-cart 
