Chat theo nhóm  nhiều người

--- a/src/views/client/partials/list-btn-user.pug
+++ b/src/views/client/partials/list-btn-user.pug
@@ -9,3 +9,4 @@
       span.badge.badge-light(
         badge-user-accept = user.id 
       )  #{user.friendAccepts.length}
+    a.btn.btn-primary.m-1(href="/room-chat") Phong
